--- a/StockCalendar/app/src/main/AndroidManifest.xml
+++ b/StockCalendar/app/src/main/AndroidManifest.xml
@@ -3,8 +3,7 @@
     package="com.example.stockcalendar">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission
-        android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_CALENDAR" />
     <uses-permission android:name="android.permission.WRITE_CALENDAR" />
 
@@ -15,12 +14,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LinearRecycleViewActivity">
+        <activity
+            android:name=".LinearRecycleViewActivity"
             android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.stockcalendar.MainActivity" >
-            </meta-data>
+                android:value="com.example.stockcalendar.MainActivity"></meta-data>
         </activity>
 
         <activity android:name=".MainActivity">
